--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body class="container">
   	<div class="row">
-    <h1 class="col-xs-12 col-sm-6">Hello, world.</h1>
+    <h1 class="col-xs-12 col-sm-6">Hello, world!</h1>
 </div>
 <div class="row">
     <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6">
