--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+<!-- Sweet Alert -->
+<script src="lib/sweet-alert.min.js"></script>
+ <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -32,6 +35,6 @@
 <div class="row">
     <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6">
 </div>
-   
+<script src="swalTest.js"></script>
      </body>
 </html>
