--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <!-- Sweet Alert -->
 <script src="lib/sweet-alert.min.js"></script>
  <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -35,6 +36,9 @@
 <div class="row">
     <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6">
 </div>
-<script src="swalTest.js"></script>
+<script>function(){
+  swal("Click here!")
+    };
+  </script>
      </body>
 </html>
