swal test failed, regular alert test

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6">
 </div>
 <script>function(){
-  swal("Click here!")
+  alert("Click here!")
     };
   </script>
      </body>
