regular alerts test 2

--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
 <div class="row">
     <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6">
 </div>
-<script>function(){
-  alert("Click here!")
-    };
-  </script>
+<div class="row">
+<button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+    alert("Hello\nHow are you?");
+}
+</script>
+</div>
+
      </body>
 </html>
