alert test edit 1

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6">
 </div>
 <div class="row">
-<button onclick="myFunction()">Try it</button>
+<button onclick="myFunction()">Click</button>
 
 <script>
 function myFunction() {
-    alert("Hello\nHow are you?");
+    alert("You clicked!\nThanks for testing.");
 }
 </script>
 </div>
