--- a/index.html
+++ b/index.html
@@ -32,18 +32,29 @@
   <body class="container">
   	<div class="row">
     <h1 class="col-xs-12 col-sm-6">Hello, world!</h1>
-</div>
-<div class="row">
-    <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6">
-</div>
-<div class="row">
-<button onclick="myFunction()">Click</button>
+    </div>
 
-<script>
-function myFunction() {
-    alert("You clicked!\nThanks for testing.");
-}
-</script>
+<div class="row">
+    <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6 col-md-4" >
+</div>
+
+<div class="row">
+<button onclick="myFunction()">Test</button>
+  <script>
+  function myFunction() {
+      alert("You clicked!\nThanks for testing.");
+  }
+  </script>
+</div>
+
+<div class="row">
+  <button>Troll</button>
+  <script src="troll_choose_adventure.js"></script>
+</div>
+
+<div class="row">
+  <button>Road</button>
+  <script src="javascript_road_adventure.js"></script>
 </div>
 
      </body>
