external javascript button test (n+1)

--- a/index.html
+++ b/index.html
@@ -39,22 +39,20 @@
 </div>
 
 <div class="row">
-<button onclick="myFunction()">Test</button>
+<button onclick="testFunction()">Test</button>
   <script>
-  function myFunction() {
+  function testFunction() {
       alert("You clicked!\nThanks for testing.");
   }
   </script>
 </div>
 
 <div class="row">
-  <button>Troll</button>
-  <script src="troll_choose_adventure.js"></script>
+  <button onclick="troll_choose_adventure.js">Troll</button>
 </div>
 
 <div class="row">
-  <button>Road</button>
-  <script src="javascript_road_adventure.js"></script>
+  <button onclick="javascript_road_adventure.js">Road</button>
 </div>
 
      </body>
