--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 </div>
 
 <div class="row">
-  <button onclick="troll_choose_adventure.js">Troll</button>
+  <button onclick="troll_choose_adventure">Troll</button>
 </div>
 
 <div class="row">
-  <button onclick="javascript_road_adventure.js">Road</button>
+  <button onclick="javascript_road_adventure">Road</button>
 </div>
 
      </body>
