--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
 <script src="lib/sweet-alert.min.js"></script>
  <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<!-- external javascripts  -->
+<script type="text/javascript" src="troll_choose_adventure.js" ></script>
+<script type="text/javascript" src="javascript_road_adventure.js"></script>
+
   </head>
   <body class="container">
   	<div class="row">
@@ -48,11 +46,13 @@
 </div>
 
 <div class="row">
-  <button onclick="troll_choose_adventure">Troll</button>
+  <button>Troll</button>
+  <script>troll();</script>
 </div>
 
 <div class="row">
-  <button onclick="javascript_road_adventure">Road</button>
+  <button>Road</button>
+  <script>road();</script>
 </div>
 
      </body>
