re-upload because eric was calling the old files like a dingus

--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
 <script src="lib/sweet-alert.min.js"></script>
  <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
 
-<!-- external javascripts  -->
-<script type="text/javascript" src="troll_choose_adventure.js" ></script>
-<script type="text/javascript" src="javascript_road_adventure.js"></script>
-
   </head>
   <body class="container">
   	<div class="row">
@@ -46,12 +42,14 @@
 </div>
 
 <div class="row">
-  <button>Troll</button>
+  <button >Troll</button>
+  <script type="text/javascript" src="troll.js" ></script>
   <script>troll();</script>
 </div>
 
 <div class="row">
   <button>Road</button>
+  <script type="text/javascript" src="road.js"></script>
   <script>road();</script>
 </div>
 
