commenting troll adventure due to only testing one batch of changes in onClick

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <script src="lib/sweet-alert.min.js"></script>
  <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
 
+<!--road-->
+<script type="text/javascript" src="road.js"></script>
+
   </head>
   <body class="container">
   	<div class="row">
@@ -41,16 +44,15 @@
   </script>
 </div>
 
+<!--
 <div class="row">
   <button >Troll</button>
   <script type="text/javascript" src="troll.js" ></script>
   <script>troll();</script>
 </div>
-
+-->
 <div class="row">
-  <button>Road</button>
-  <script type="text/javascript" src="road.js"></script>
-  <script>road();</script>
+  <button onclick="road()" >Road</button>
 </div>
 
      </body>
