fixed internal script tag errors by complete removal

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 <script src="lib/sweet-alert.min.js"></script>
  <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
 
-<!--road-->
+<!--adventures-->
 <script type="text/javascript" src="road.js"></script>
+<script type="text/javascript" src="troll.js"></script>
 
   </head>
   <body class="container">
@@ -44,13 +45,11 @@
   </script>
 </div>
 
-<!--
+
 <div class="row">
-  <button >Troll</button>
-  <script type="text/javascript" src="troll.js" ></script>
-  <script>troll();</script>
+  <button onclick="troll()">Troll</button>
 </div>
--->
+
 <div class="row">
   <button onclick="road()" >Road</button>
 </div>
