making a crude joke

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <script type="text/javascript" src="road.js"></script>
 <script type="text/javascript" src="troll.js"></script>
 
+<!--sweet alerts js -->
+<script type"text/javascript" src="swalTest.js"></script>
+
   </head>
   <body class="container">
   	<div class="row">
