sweet alert test

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   </script>
 </div>
 
+<script> swal("Here's a message!", "It's pretty, isn't it?") </script>
 
 <div class="row">
   <button onclick="troll()">Troll</button>
