sweet alert test 3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <!-- Sweet Alert -->
-<script src="lib/sweet-alert.min.js"></script>
+<script src="lib/sweet-alert.js"></script>
  <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
 
 <!--adventures-->
@@ -48,7 +48,6 @@
   </script>
 </div>
 
-<script> swal("Here's a message!", "It's pretty, isn't it?") </script>
 
 <div class="row">
   <button onclick="troll()">Troll</button>
