--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
   </head>
   <body class="container">
   	<div class="row">
-    <h1 class="col-xs-12 col-sm-6">Hello, world!</h1>
+    <h1 class="col-xs-12 col-sm-4">Hello, world!</h1>
+    </div>
+
+    <div class="row">
+    <h2 class="col-xs-12 col-sm-4">A place to practice</h2>
+    </div>
+
+    <div class="row">
+    <h3 class="col-xs-12 col-sm-4">Feel free to try the alert-based text adventures, currently located at the bottom of the screen. </h3>
     </div>
 
 <div class="row">
@@ -47,6 +55,10 @@
   }
   </script>
 </div>
+
+<div class="row">
+    <h4 class="col-xs-12 col-sm-4">Fun begins with the push of a button!</h4>
+    </div>
 
 
 <div class="row">
