--- a/index.html
+++ b/index.html
@@ -36,38 +36,38 @@
     </div>
 
     <div class="row">
-    <h2 class="col-xs-12 col-sm-4">A place to practice</h2>
+    <h3 class="col-xs-12 col-sm-4">A place for Couch to practice</h3>
     </div>
 
     <div class="row">
     <h3 class="col-xs-12 col-sm-4">Feel free to try the alert-based text adventures, currently located at the bottom of the screen. </h3>
     </div>
 
-<div class="row">
+    <div class="row">
     <img src="https://8chan.co/ttgg/src/1411755436185.png" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6 col-md-4" >
-</div>
+    </div>
 
-<div class="row">
-<button onclick="testFunction()">Test</button>
-  <script>
-  function testFunction() {
-      alert("You clicked!\nThanks for testing.");
-  }
-  </script>
-</div>
-
-<div class="row">
+    <div class="row">
     <h4 class="col-xs-12 col-sm-4">Fun begins with the push of a button!</h4>
     </div>
 
 
-<div class="row">
-  <button onclick="troll()">Troll</button>
-</div>
+    <div class="row">
+    <button onclick="testFunction()">Test</button>
+      <script>
+      function testFunction() {
+          alert("You clicked!\nThanks for testing.");
+      }
+      </script>
+    </div>
 
-<div class="row">
-  <button onclick="road()" >Road</button>
-</div>
+    <div class="row">
+    </button onclick="troll()">Troll</button>
+    </div>
 
-     </body>
+    <div class="row">
+    <button onclick="road()" >Road</button>
+    </div>
+
+  </body>
 </html>
