button broke and i fixed it

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="row">
-    </button onclick="troll()">Troll</button>
+    <button onclick="troll()">Troll</button>
     </div>
 
     <div class="row">
