more sweet alert testing, still inconclusive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!-- Sweet Alert -->
 <script src="lib/sweet-alert.js"></script>
- <link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
+<link rel="stylesheet" type="text/css" href="lib/sweet-alert.css">
 
 <!--adventures-->
 <script type="text/javascript" src="road.js"></script>
@@ -56,7 +56,7 @@
     <button onclick="testFunction()">Test</button>
       <script>
       function testFunction() {
-          alert("You clicked!\nThanks for testing.");
+          swal("You clicked the test button!");
       }
       </script>
     </div>
