--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 <script type="text/javascript" src="road.js"></script>
 <script type="text/javascript" src="troll.js"></script>
 
-<!--sweet alerts js -->
-<script type"text/javascript" src="swalTest.js"></script>
-
   </head>
   <body class="container">
   	<div class="row">
@@ -56,7 +53,7 @@
     <button onclick="testFunction()">Test</button>
       <script>
       function testFunction() {
-          swal("You clicked the test button!");
+          swal("You clicked the test button!", "If you're reading this, IT WORKED", "success");
       }
       </script>
     </div>
