--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="row">
-    <img src="images/index/couch/pepe.jpeg" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6 col-md-4" >
+    <img src="images/index/couch/pepe.jpg" alt="feelsbadman.jpg" class="img-circle col-xs-12 col-sm-6 col-md-4" >
     </div>
 
     <div class="row">
